fixes directory details being cut off

--- a/css/screen.css
+++ b/css/screen.css
@@ -3556,6 +3556,11 @@ h2 {
   max-width: 120px;
 }
 
+@media (max-width: 479px) {
+  .secure-details {
+    clear: both;
+  }
+}
 @media (min-width: 480px) {
   .profile-details {
     float: left;
@@ -3585,6 +3590,15 @@ h2 {
   }
 }
 @media (min-width: 1000px) {
+  .profile-details {
+    width: 73%;
+  }
+
+  .secure-details {
+    width: 27%;
+  }
+}
+@media (min-width: 1200px) {
   .profile-details {
     width: 80%;
   }
